tests/analyzer/errors/assign_type.rv
use .data.math

struct Foo {}

fn main() {
    var foo = Foo
    var point = math.Vec2
}
